--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -83,8 +83,7 @@
           </a>
         </div>
         <ul class="navbar-nav">
-          <li><a href="{{ '/' | relative_url }}">Home</a></li>
-          <li><a href="{{ '/rag/rag-index.html' | relative_url }}">Index</a></li>
+          <li><a href="{{ '/rag/rag-index.html' | relative_url }}">Browse All</a></li>
           <li><a href="{{ '/examples/' | relative_url }}">Examples</a></li>
           <li><a href="https://github.com/{{ site.repository }}" target="_blank" rel="noopener">GitHub</a></li>
         </ul>
